Infra-Kubernetes/Manifests/webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-assignment-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: assignment-webapp
  template:
    metadata:
      labels:
        app: assignment-webapp
    spec:
      containers:
        - name: assignment-webapp
          image: vkchallagalla/webapp
          ports:
            - containerPort: 8080
          resources:
           limits:
             cpu: 500m
           requests:
             cpu: 200m
