Infra-Kubernetes/Manifests/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: assignment-webapp-service
spec:
  selector:
    app: assignment-webapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
